[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "cone.firebase"
version = "1.1.0.dev0"
description = "Firebase integration for cone.app"
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "Simplified BSD"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
keywords = ["node", "pyramid", "cone", "web"]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "proto-plus==1.18.1",
    "google-api-core==1.26.3",
    "google-api-python-client==2.2.0",
    "google-auth==1.29.0",
    "google-auth-httplib2==0.1.0",
    "google-auth-oauthlib==0.4.6",
    "google-cloud-core==1.6.0",
    "google-cloud-firestore==2.1.0",
    "google-cloud-storage==1.37.1",
    "google-crc32c==1.1.2",
    "google-pasta==0.2.0",
    "google-resumable-media==1.2.0",
    "googleapis-common-protos==1.53.0",
    "cone.ugm>1.0.99",
    "requests",
    "firebase_admin==4.5.3",
    "protobuf==3.15.8",
]

[project.optional-dependencies]
test = [
    "cone.app[test]",
    "pytest",
    "zope.pytestlayer",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.firebase"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    {path = "README.rst"},
    {text = "\n\n"},
    {path = "CHANGES.rst"},
    {text = "\n\n"},
    {path = "LICENSE.rst"},
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".travis.yml",
    "/.github/",
    "/docs",
    "/Makefile",
    "/mx.ini",
    "/package.json",
    "/pnpm-lock.yaml",
    "/scripts/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
